--- a/static/css/main.css
+++ b/static/css/main.css
@@ -217,7 +217,7 @@ p, li, input, textarea, button {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255);
+    background: rgba(255, 255, 255, 0.01);
     pointer-events: none;
 }
 
